--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -1,15 +1,15 @@
 <header class="header">
-  <div class="container">
-    <div class="header__wrapper">
-      <button class="header__hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
+  <div class="container_inner">
+    <div class="header_wrapp">
+      <div class="logo_wrapp">
+          <img src="../../img/logo.svg" alt="" />
+      </div>
 
-      <a href="./index.html" class="header__logo">
-        <img src="icons/logo.svg" alt="logo" />
-      </a>
+      <div class="btns-wrapper">
+        {% include "components/sign-in.html" %}
+
+        {% include "components/sidenav.html" %}
+      </div>
     </div>
   </div>
 </header>
