--- a/src/scss/blocks/_achievement.scss
+++ b/src/scss/blocks/_achievement.scss
@@ -39,7 +39,7 @@
 
 .achievement .achievement_images img {
     transform: translateX(100%);
-    transition: transform 0.8s ease-in;
+    transition: transform 0.6s ease-out;
     position: absolute;
     right: 0;
     top: 0; 
