--- a/src/scss/blocks/_partner.scss
+++ b/src/scss/blocks/_partner.scss
@@ -24,7 +24,7 @@
     }
     .overlay-bg{
         position: absolute;
-        height: 100%;
+        height: 85%;
         width: 100%;
         background-color: color(light-bg);
         transform: translate(10%, -10%);
@@ -34,16 +34,14 @@
         box-shadow: none;
     }
     .uk-card-body{
-        padding: 13px 0;
+        padding: 13px 0 70px;
+        color: color(main-dark);
     }
     .uk-card-body p {
         margin: 5px 0;
     }
     .uk-card-body .uk-card-title{
         margin-bottom: 0;
-        color: color(main-dark);
-    }
-    .uk-card-body{
         color: color(main-dark);
     }
     .uk-card-body .card-link-read{
@@ -64,17 +62,24 @@
     }
     .parters_arrow_wrapp{
         position: relative;
+        transform: translate(-2%,-2%);
+        padding-top: 30px;
         a{
             border: 1px solid color(main);
             border-radius: 50%;
             padding: 14.97px 17.72px 15px 18.17px;
+            position: relative;
+            display: inline-block;
             svg{
                 width: 15px;
                 height: 15px;
+                .uk-icon:not(.uk-preserve) [fill*='#']:not(.uk-preserve) {
+                    fill: color(main) !important;   
+                }
+                path{
+                    fill: color(main) !important;
+                }
             }
-        }
-        a:first-child{
-            margin-right: 100px;
         }
     }
 
