all done desctop

--- a/src/html/components/header.html
+++ b/src/html/components/header.html
@@ -2,13 +2,17 @@
   <div class="container_inner">
     <div class="header_wrapp">
       <div class="logo_wrapp">
-          <img src="../../img/logo.svg" alt="" />
+        <img class="logo_main" src="../../img/logo.svg" alt="" />
+        <img
+          class="logo_inverse"
+          src="../../img/logo-without-text.svg"
+          alt=""
+        />
       </div>
 
       <div class="btns-wrapper">
-        {% include "components/sign-in.html" %}
-
-        {% include "components/sidenav.html" %}
+        {% include "components/sign-in-form.html" %} {% include
+        "components/sidenav.html" %}
       </div>
     </div>
   </div>
