--- a/src/html/layouts/main.html
+++ b/src/html/layouts/main.html
@@ -14,6 +14,16 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.17.10/dist/css/uikit.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     {% include "components/header.html" %}
@@ -31,6 +41,7 @@
     <script src="./js/jquery.maskedinput.min.js"></script> -->
 
     <script src="./js/script.js"></script>
+    <script src="./js/moduls-js/header.js"></script>
     <script src="./js/imports.js" type="module"></script>
   </body>
 </html>
