--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,7 +1,5 @@
-
 @include define-color("dark", #000);
 @include define-color("light", #ffffff);
-@include define-color("light-bg", #FBF4E7);
-@include define-color("main", #76A0CD);
-@include define-color("main-dark", #222D38);
-
+@include define-color("light-bg", #fbf4e7);
+@include define-color("main", #76a0cd);
+@include define-color("main-dark", #222d38);
