--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -1,7 +1,137 @@
 <footer class="footer">
   <div class="container">
-    <div class="footer__wrapper">
-      <div class="footer__column"></div>
+    <div class="footer_inner">
+      <div class="c-footer">
+        <div class="layout">
+          <div class="layout_item w-70">
+            <a href="">
+              <div class="title_wrapp">
+                <h2 class="title">AДЖИП <span>- лучшое каждому!!!</span></h2>
+              </div>
+            </a>
+          </div>
+          <div class="layout_item w-25">
+            <nav class="c-nav-tool">
+              <h4 class="c-nav-tool_title">Меню</h4>
+              <ul class="c-nav-tool_list">
+                <li>
+                  <a href="/collections/all" class="c-link">О нас</a>
+                </li>
+
+                <li>
+                  <a href="/pages/about-us" class="c-link">Партнеры</a>
+                </li>
+
+                <li>
+                  <a href="/blogs/community" class="c-link">Диструбуция</a>
+                </li>
+                <li>
+                  <a href="#" class="c-link">Как работаем</a>
+                </li>
+                <li>
+                  <a href="#" class="c-link">Больше чем</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="layout_item w-25 contact">
+            <nav class="c-nav-tool">
+              <h4 class="c-nav-tool_title">Контакты</h4>
+              <ul class="c-nav-tool_list">
+                <li class="c-nav-tool_item">
+                  <a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M13 9h-2v2h2zm4 0h-2v2h2zm3 6.5c-1.25 0-2.45-.2-3.57-.57a1.02 1.02 0 0 0-1.02.24l-2.2 2.2a15.074 15.074 0 0 1-6.59-6.58l2.2-2.21c.28-.27.36-.66.25-1.01A11.36 11.36 0 0 1 8.5 4c0-.55-.45-1-1-1H4c-.55 0-1 .45-1 1c0 9.39 7.61 17 17 17c.55 0 1-.45 1-1v-3.5c0-.55-.45-1-1-1M19 9v2h2V9z"/></svg>
+                    tooadjip@mail.ru
+                  </a>
+                </li>
+
+                <li class="c-nav-tool_item">
+                  <a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M22 4H2v16h20zm-2 4l-8 5l-8-5V6l8 5l8-5z"/></svg>
+                    8-701-721-58-07
+                  </a>
+                </li>
+
+                <li class="c-nav-tool_item">
+                  <a href="">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" d="M12 1C7.59 1 4 4.59 4 9c0 5.57 6.96 13.34 7.26 13.67l.74.82l.74-.82C13.04 22.34 20 14.57 20 9c0-4.41-3.59-8-8-8m0 19.47C9.82 17.86 6 12.54 6 9c0-3.31 2.69-6 6-6s6 2.69 6 6c0 3.83-4.25 9.36-6 11.47m-1.53-9.3L8.71 9.4l-1.42 1.42L10.47 14l6.01-6.01l-1.41-1.42z"/></svg>
+                    Казахстан,
+                    г.Атырау
+                    ул. Алтынколь 12
+                  </a>
+                </li>
+
+              </ul>
+            </nav>
+          </div>
+        </div>
+
+        <div class="layout c-2">
+          <div class="layout_item w-70">
+            <form action="">
+              <input
+              type="text"
+              placeholder="Подпишитесь на новости Аджип"
+              uk-tooltip="Введите почту <br> Пример - email@gmail.com"
+              />
+              <button>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  width="24"
+                  height="24"
+                >
+                  <path fill="none" d="M0 0h24v24H0z" />
+                  <path
+                    d="M16.172 11l-5.364-5.364 1.414-1.414L20 12l-7.778 7.778-1.414-1.414L16.172 13H4v-2z"
+                  />
+                </svg>
+              </button>
+            </form>
+          </div>
+          <div class="layout_item w-25 social">
+            <ul class="flex">
+              <li>
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16"><path fill="currentColor" d="M13.95 4.24C11.86 1 7.58.04 4.27 2.05C1.04 4.06 0 8.44 2.09 11.67l.17.26l-.7 2.62l2.62-.7l.26.17c1.13.61 2.36.96 3.58.96c1.31 0 2.62-.35 3.75-1.05c3.23-2.1 4.19-6.39 2.18-9.71Zm-1.83 6.74c-.35.52-.79.87-1.4.96c-.35 0-.79.17-2.53-.52c-1.48-.7-2.71-1.84-3.58-3.15c-.52-.61-.79-1.4-.87-2.19c0-.7.26-1.31.7-1.75c.17-.17.35-.26.52-.26h.44c.17 0 .35 0 .44.35c.17.44.61 1.49.61 1.58c.09.09.05.76-.35 1.14c-.22.25-.26.26-.17.44c.35.52.79 1.05 1.22 1.49c.52.44 1.05.79 1.66 1.05c.17.09.35.09.44-.09c.09-.17.52-.61.7-.79c.17-.17.26-.17.44-.09l1.4.7c.17.09.35.17.44.26c.09.26.09.61-.09.87Z"/></svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 48 48"><path fill="currentColor" d="M41.4193 7.30899C41.4193 7.30899 45.3046 5.79399 44.9808 9.47328C44.8729 10.9883 43.9016 16.2908 43.1461 22.0262L40.5559 39.0159C40.5559 39.0159 40.3401 41.5048 38.3974 41.9377C36.4547 42.3705 33.5408 40.4227 33.0011 39.9898C32.5694 39.6652 24.9068 34.7955 22.2086 32.4148C21.4531 31.7655 20.5897 30.4669 22.3165 28.9519L33.6487 18.1305C34.9438 16.8319 36.2389 13.8019 30.8426 17.4812L15.7331 27.7616C15.7331 27.7616 14.0063 28.8437 10.7686 27.8698L3.75342 25.7055C3.75342 25.7055 1.16321 24.0823 5.58815 22.459C16.3807 17.3729 29.6555 12.1786 41.4193 7.30899Z"/></svg>
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 24 24"
+                    width="32"
+                    height="32"
+                  >
+                    <path fill="none" d="M0 0h24v24H0z" />
+                    <path fill="currentColor"
+                      d="M12 2C6.477 2 2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.879V14.89h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.989C18.343 21.129 22 16.99 22 12c0-5.523-4.477-10-10-10z"
+                    />
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 19h-4a8 8 0 0 1-8-8V6h4v5a4 4 0 0 0 4 4h0V6h4v4.5h.03A4.531 4.531 0 0 0 18 6.004h4l-.342 1.711A6.858 6.858 0 0 1 18 12.504h0a5.34 5.34 0 0 1 3.566 4.111L22 19.004h0h-4a4.531 4.531 0 0 0-3.97-4.496v4.5z"/></svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="layout_item w-25 nj_totop">
+            <a href="" uk-totop uk-scroll> </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer_copyright">
+      <p>&copy; 2022 The Afterlogo Company Inc.</p>
     </div>
   </div>
 </footer>
