--- a/src/scss/base/_default.scss
+++ b/src/scss/base/_default.scss
@@ -1,58 +1,71 @@
-section{
+section,
+footer {
   overflow: hidden;
+  .title {
+    font-family: "Comfortaa", sans-serif;
+    font-optical-sizing: auto;
+    font-size: 2.3rem;
+    font-weight: 400;
+  }
+  .uk-card-title {
+    font-family: "Comfortaa", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+  }
 }
-.pd-regular{
+.pd-regular {
   padding: rem(80px) 0 rem(100px);
 }
 .title {
-    text-transform: initial;
-    padding-bottom: rem(50px);
-    color: color(main-dark);
-  }
-  .icon {
-    width: 35px;
-    height: 35px;
-    svg {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .container {
-    max-width: 1440px;
+  text-transform: initial;
+  padding-bottom: rem(50px);
+  color: color(main-dark);
+}
+.icon {
+  width: 35px;
+  height: 35px;
+  svg {
     width: 100%;
-    margin: 0 auto;
-    padding: 0 15px;
+    height: 100%;
   }
-  
-  .container_fluid {
-    padding: 0 30px;
-    margin: 0 auto;
+}
+
+.container {
+  max-width: 1440px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.container_fluid {
+  padding: 0 30px;
+  margin: 0 auto;
+  width: 100%;
+}
+.container_inner {
+  max-width: 100vw;
+  margin: 0 auto;
+}
+.img_wrapp {
+  max-width: 100%;
+  height: auto;
+  img {
+    display: block;
+    margin: auto;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
-  .container_inner {
-    max-width: 100vw;
-    margin: 0 auto;
-  }
-  .img_wrapp {
-    max-width: 100%;
-    height: auto;
-    img {
-      display: block;
-      margin: auto;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-  .nj-p18{
-    font-size: rem(18px);
-  }
-  .nj-p20{
-    font-size: rem(20px);
-  }
-  .nj-p22{
-    font-size: rem(22px);
-  }
-  .nj-p25{
-    font-size: rem(25px);
-  }
+}
+.nj-p18 {
+  font-size: rem(18px);
+}
+.nj-p20 {
+  font-size: rem(20px);
+}
+.nj-p22 {
+  font-size: rem(22px);
+}
+.nj-p25 {
+  font-size: rem(25px);
+}
