--- a/src/scss/base/_normalize.scss
+++ b/src/scss/base/_normalize.scss
@@ -1,25 +1,23 @@
-
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
-html{
+html {
   @include fontSize(19px);
 }
 
 body {
-    color: color('dark');
-    background: color('light');
+  color: color("dark");
+  background: color("light");
 }
 
 h1 {
-  color: color('light');
+  color: color("light");
 }
 
 ul {
   padding: 0;
   margin: 0;
-  li{
+  li {
     list-style: none;
   }
 }
-
