--- a/src/scss/blocks/_about.scss
+++ b/src/scss/blocks/_about.scss
@@ -1,19 +1,21 @@
-.about{
-    background: linear-gradient(90deg, #222D38, #76A0CD);
+.about {
+  background: linear-gradient(90deg, #222d38, #76a0cd);
+  color: color(light);
+  box-shadow: 0px 2px 2px 0px #76a0cd;
+
+  .title {
     color: color(light);
-    .title{
-        color: color(light);
-        text-align: center;
-        padding-bottom: 0;
-    }
-    .about_list{
-        padding: 0;
-        margin: 0;
-    }
-    .about_list p{
-        font-size: rem(19px);
-        font-weight: 500;
-        padding: 0;
-        margin: 0;
-    }
+    text-align: center;
+    padding-bottom: 0;
+  }
+  .about_list {
+    padding: 0;
+    margin: 0;
+  }
+  .about_list p {
+    font-size: rem(19px);
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+  }
 }
