--- a/src/scss/blocks/_achievement.scss
+++ b/src/scss/blocks/_achievement.scss
@@ -1,74 +1,66 @@
 .achievement {
-    position: relative;
-    &::after{
-        position: absolute;
-        content: '';
-        width: 80%;
-        height: 2px;
-        background: linear-gradient(90deg, #ffff, #76A0CD, #ffff );
-        bottom: 0%;
-        left: 50%;
-        transform: translateX(-50%);
-        // animation: slide-in-out 5s linear infinite forwards; 
-        z-index: 1;
-    }
+  position: relative;
+  &::after {
+    position: absolute;
+    content: "";
+    width: 80%;
+    height: 2px;
+    background: linear-gradient(90deg, #ffff, #76a0cd, #ffff);
+    bottom: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    // animation: slide-in-out 5s linear infinite forwards;
+    z-index: 1;
+  }
 }
 
 .achievement .achievement_wrapper {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 55px;
-
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 55px;
 }
-.achievement .uk-list>:nth-child(n+2) {
-    padding-top: 15px;
-    margin: 0;
+.achievement .uk-list > :nth-child(n + 2) {
+  padding-top: 15px;
+  margin: 0;
+}
+.uk-list li:hover {
+  transition: 0.6s ease;
+  transform: scale(1);
+}
+.uk-list {
+  cursor: none;
+}
+.uk-list li {
+  transition: 0.6s ease;
+  transform: scale(0.9);
+  cursor: none;
 }
 
 .achievement .achievement_images {
-    position: relative;
-    width: 50%; 
-    min-height: 500px; 
-    overflow: hidden; 
-    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20230705/pngtree-golden-achievement-unlocked-celebrating-your-success-on-a-blue-3d-background-image_3808269.jpg);
-    background-size: cover;
-    background-position: center;
+  position: relative;
+  width: 50%;
+  min-height: 500px;
+  overflow: hidden;
+  background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20230705/pngtree-golden-achievement-unlocked-celebrating-your-success-on-a-blue-3d-background-image_3808269.jpg);
+  background-size: cover;
+  background-position: center;
 }
 
 .achievement .achievement_images img {
-    transform: translateX(100%);
-    transition: transform 0.6s ease-out;
-    position: absolute;
-    right: 0;
-    top: 0; 
-    display: block;
-    width: 100%; 
-    height: auto;
-    opacity: 0;
+  transition: opacity 0.6s ease-in;
+  position: absolute;
+  right: 0;
+  top: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  background: rgba(0, 0, 0, 0.813);
 }
 
 .achievement .achievement_images img.visible {
-    transform: translateX(0);
-    opacity: 1; 
-    height: 100%;
+  opacity: 1;
+  transition: opacity 0.6s ease-in;
 }
-
-@keyframes slide-in-out {
-    0% {
-      transform: translateX(-100%); /* Начать с левого края экрана */
-      opacity: 0;
-    }
-    10% {
-      opacity: 1;
-    }
-    90% {
-      opacity: 1;
-    }
-    100% {
-      transform: translateX(100%); /* Уход за правый край экрана */
-      opacity: 0;
-    }
-  }
-  
