--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -1,8 +1,3 @@
-.header.inverse{
-  background: linear-gradient(45deg, #222D38, transparent);
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-}
 .header {
   z-index: 98;
   width: 100%;
@@ -12,18 +7,38 @@
   margin: 0 auto;
   transition: top 0.3s linear;
   position: fixed;
-
-  //   backdrop-filter: contrast(0.5);
-  .header_wrapp{
+  &.inverse {
+    background: linear-gradient(90deg, #222d38ef, #76a0cd92);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    .logo_wrapp {
+      .logo_inverse {
+        display: block;
+      }
+      .logo_main {
+        display: none;
+      }
+    }
+  }
+  .header_wrapp {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 77px;
   }
-  .logo_wrapp{
+  .logo_wrapp {
     width: 160px;
+    img {
+      height: 38px;
+    }
+    .logo_inverse {
+      display: none;
+    }
+    .logo_main {
+      display: block;
+    }
   }
-  .btns-wrapper{
+  .btns-wrapper {
     display: flex;
     align-items: center;
     gap: 50px;
