done desktop & adaptive in progress

--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -6,7 +6,7 @@
           <div class="layout_item w-70">
             <a href="">
               <div class="title_wrapp">
-                <h2 class="title">AДЖИП <span>- лучшое каждому!!!</span></h2>
+                <h2 class="title">AДЖИП <span> лучшое каждому</span></h2>
               </div>
             </a>
           </div>
