--- a/src/scss/base/_default.scss
+++ b/src/scss/base/_default.scss
@@ -6,6 +6,11 @@ footer {
     font-optical-sizing: auto;
     font-size: 2.3rem;
     font-weight: 400;
+    text-transform: initial;
+    padding-bottom: rem(50px);
+    color: color(main-dark);
+    margin: 0;
+    
   }
   .uk-card-title {
     font-family: "Comfortaa", sans-serif;
@@ -16,11 +21,7 @@ footer {
 .pd-regular {
   padding: rem(80px) 0 rem(100px);
 }
-.title {
-  text-transform: initial;
-  padding-bottom: rem(50px);
-  color: color(main-dark);
-}
+
 .icon {
   width: 35px;
   height: 35px;
@@ -32,7 +33,6 @@ footer {
 
 .container {
   max-width: 1440px;
-  width: 100%;
   margin: 0 auto;
   padding: 0 15px;
 }
@@ -68,4 +68,44 @@ footer {
 }
 .nj-p25 {
   font-size: rem(25px);
+}
+@media (max-width: 1440px){
+  .container{
+    max-width: 100%;
+  }
+}
+@media (max-width: 1200px) {
+  .pd-regular {
+    padding: rem(60px) 0 rem(60px);
+  }
+  section .title{
+    @include fontSize(32);
+    text-align: center;
+  }
+  .nj-p22 {
+    font-size: rem(18px);
+  }
+  .nj-p18 {
+    font-size: rem(16px);
+  }
+}
+
+@media (max-width: 450px) {
+  .pd-regular {
+    padding: rem(40px) 0 rem(50px);
+  }
+  section .title{
+    @include fontSize(28)
+  }
+
+  .nj-p22 {
+    font-size: rem(16px);
+  }
+
+}
+@media (max-width: 350px) {
+  .nj-p22 {
+    font-size: rem(13px);
+  }
+
 }
