--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -44,3 +44,29 @@
     gap: 50px;
   }
 }
+@media (max-width: 1200px){
+  .header{
+    .header_wrapp{
+      padding: 0 20px;
+    }
+  }
+}
+@media (max-width: 450px){
+  .header{
+    .header_wrapp{
+      padding: 0 20px;
+    }
+    .menu-btn-mobile svg{
+      width: 30px;
+    }
+    .btns-wrapper{
+      gap: 25px;
+    }
+    .uk-button{
+      padding: 0 10px;
+    }
+  }
+}
+.header .logo_wrapp .logo_main{
+  width: 120px;
+}
