--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,8 +1,10 @@
+
 @import "base/global";
 @import "base/mixins";
 @import "base/normalize";
 @import "base/variables";
 @import "base/default";
+@import "base/fonts";
 
 @import "libs/splide.min.css";
 
