--- a/src/scss/blocks/_footer.scss
+++ b/src/scss/blocks/_footer.scss
@@ -5,6 +5,10 @@
   display: flex;
   align-items: center;
 
+  .container{
+    width: 100%;
+  }
+  
   .footer_inner {
     background: color(light);
     backdrop-filter: blur(50px);
@@ -189,9 +193,6 @@
 }
 @media (max-width: 675px){
   .footer{
-    .container{
-      width: 100%;
-    }
     .layout{
       display: flex;
       flex-direction: column;
@@ -247,8 +248,9 @@
   .footer .title_wrapp .title{
     position: absolute;
     top: 0;
-    padding: 0 0 0 85px;
+    padding-left: 30%;
     letter-spacing: 2px;
+    width: 100%;
     span{
       position: relative;
       width: 100vw;
