--- a/src/scss/blocks/_partner.scss
+++ b/src/scss/blocks/_partner.scss
@@ -124,9 +124,13 @@
 }
 @media (max-width: 550px){
   .partners{
+    .title{
+      padding-bottom: 20px;
+    }
     .partners_wrapper{
       grid-template-columns: 100%;
       gap: 70px;
+      padding-bottom: 0;
     }
     .partners_list{
       padding-left: 0;
@@ -153,6 +157,7 @@
   }
   .partners .overlay-wrapper{
     max-width: 100%;
+    padding-bottom: 0;
   }
   .uk-grid>* {
     padding-left: 0px;
