--- a/src/html/components/footer.html
+++ b/src/html/components/footer.html
@@ -73,7 +73,7 @@
               <input
               type="text"
               placeholder="Подпишитесь на новости Аджип"
-              uk-tooltip="Введите почту <br> Пример - email@gmail.com"
+              uk-tooltip="Введите почту <br> Пример: email@gmail.com"
               />
               <button>
                 <svg
