--- a/src/scss/blocks/_how-we-work.scss
+++ b/src/scss/blocks/_how-we-work.scss
@@ -124,8 +124,9 @@
     }
   }
 }
-@media (max-width: 1350px){
+@media (max-width: 1450px){
   .how-we-work{
+    padding-bottom: 50px;
     .list{
       align-items: center;
       align-content: center;
